# LLMGuard

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  example_curl.txt  policies.yaml  pyproject.toml
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/lib/: api.ts
src/: main.py
src/core/: __init__.py  config.py  constants.py  logging.py  shutdown.py  startup.py  state.py
src/domain/transformers/: __init__.py  base.py  classification.py  ner.py
src/domain/validators/: __init__.py  context.py  types.py  validate.py
src/domain/validators/ner/: __init__.py  main.py
src/domain/validators/pii_leakage/: __init__.py  main.py
src/domain/validators/prompt_leakage/: __init__.py  main.py
src/domain/validators/toxicity/: __init__.py  main.py
src/exceptions/: __init__.py  base.py  exceptions.py  handlers.py  http.py
src/middleware/: __init__.py  logging_middleware.py  registry.py  request_id_middleware.py  security_middleware.py  timeout_middleware.py
src/presentation/: proxy_utils.py
src/presentation/dependencies/: __init__.py  main.py
src/presentation/routes/: gemini_proxy.py  health.py  openai_proxy.py  safeguard.py
src/shared/: __init__.py  types.py
src/utils/: __init__.py  utils.py
